tests/snapshot/error/regexp/source_location_unicode.js
// Unicode mode reads directly as UTF-8
/ğŸ˜‚{2,1}/u;